#    git diff <cluster commit id> Changelog
# It is also a good idea to take a look on:
#    yt/server/master/cell_master/serialize.cpp - if the version differs, then the update should be done with master snapshots (+ --set-read-only).
#    yt/server/node/tablet_node/serialize.cpp - if the version differs, then the update should be done with tablet cell recreation.

* shakurov: ACL validation semantics have changed for portal nodes. Update masters via snapshot.
* ifsmirnov: Sync reshard semantics changed. Update masters via snapshot.
* renadeen: Added filtering of jobs by has_competitors. Update operation archive to version 33.
* shakurov: Commit d674773a35 has changed (and fixed) serialization format of TSchedulerPool{Tree}::SpecifiedAttributes_. Update masters via snapshot.
* shakurov: Commit c5503dc801 has changed semantics of setting/removing attributes. Update masters via snapshot.
* savrus: Added some compatibility code for 19.4 clusters. Please use this version or later for updating a 19.4 cluster.
* ermolovd: Introduce new logical type. Update masters via snapshot.
* ermolovd: Disabled complex types for dynamic tables. Update masters via snapshot.
* renadeen: Added filtering of jobs by job_competition_id. Feel free to update masters without snapshots but update operation archive to version 32.
* ermolovd: Add `type_v3' to schema. Update masters via snapshot.
* ifsmirnov: Do not store tablet and replication errors on master. Update masters via snapshot.
* gritukan: Cypress tree serialization format changed. Update masters via snapshot.
* renadeen: Added new scheduler pool object at master. Update masters via snapshot.
* !IMPORTANT!
*   You can skip migration of old pools (map_nodes) to new scheduler pool objects and everything will work the old way
*       but don't forget to ask renadeen@ to perform migration of this cluster.
*   If you are brave enough to perform migration yourself then good luck.